k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: solomon
  labels:
    app: solomon
